fix fonts https support

--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -13,7 +13,7 @@
     <link href='http://www.google-analytics.com' rel='dns-prefetch'>
     <!-- Fonts -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
     <!-- Styles -->
     <%= stylesheet_link_tag "application" %>
     <%= partial "layouts/favicon" %>
@@ -36,10 +36,10 @@
       <nav class="mobile-nav mobile-visiable">
         <button id="menu-close" class="menu-toggle mobile-visiable btn-reset"><i class="icon icon-close"></i></button>
         <ul>
-          <li><a href="contactus.html">צור קשר</a></li>
-          <li><a href="about.html">אנחנו במספרים</a></li>
-          <li><a href="ambassadors.html">השגרירים שלנו</a></li>
-          <li><a href="q&a.html">שאלות ותשובות</a></li>
+          <li><a href="/contactus.html">צור קשר</a></li>
+          <li><a href="/about.html">אנחנו במספרים</a></li>
+          <li><a href="/ambassadors.html">השגרירים שלנו</a></li>
+          <li><a href="/questions_and_answers.html">שאלות ותשובות</a></li>
         </ul>
       </nav>
   <!-- /mobile-nav -->
