fix font path in production

--- a/source/stylesheets/fonts.css.scss
+++ b/source/stylesheets/fonts.css.scss
@@ -3,83 +3,83 @@
     font-family: 'Open Sans Hebrew';
     font-style: italic;
     font-weight: 300;
-    src: url('../fonts/opensanshebrew-lightitalic-webfont.eot');
-    src: url('../fonts/opensanshebrew-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/opensanshebrew-lightitalic-webfont.woff') format('woff'),
-    url('../fonts/opensanshebrew-lightitalic-webfont.ttf') format('truetype');
+    src: font-url('opensanshebrew-lightitalic-webfont.eot');
+    src: font-url('opensanshebrew-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
+    font-url('opensanshebrew-lightitalic-webfont.woff') format('woff'),
+    font-url('opensanshebrew-lightitalic-webfont.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
     font-style: normal;
     font-weight: 300;
-    src: url('../fonts/opensanshebrew-light-webfont.eot');
-    src: url('../fonts/opensanshebrew-light-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/opensanshebrew-light-webfont.woff') format('woff'),
-    url('../fonts/opensanshebrew-light-webfont.ttf') format('truetype');
+    src: font-url('opensanshebrew-light-webfont.eot');
+    src: font-url('opensanshebrew-light-webfont.eot?#iefix') format('embedded-opentype'),
+    font-url('opensanshebrew-light-webfont.woff') format('woff'),
+    font-url('opensanshebrew-light-webfont.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
     font-style: italic;
     font-weight: 400;
-    src: url('../fonts/opensanshebrew-italic-webfont.eot');
-    src: url('../fonts/opensanshebrew-italic-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/opensanshebrew-italic-webfont.woff') format('woff'),
-    url('../fonts/opensanshebrew-italic-webfont.ttf') format('truetype');
+    src: font-url('opensanshebrew-italic-webfont.eot');
+    src: font-url('opensanshebrew-italic-webfont.eot?#iefix') format('embedded-opentype'),
+    font-url('opensanshebrew-italic-webfont.woff') format('woff'),
+    font-url('opensanshebrew-italic-webfont.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/opensanshebrew-regular-webfont.eot');
-    src: url('../fonts/opensanshebrew-regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/opensanshebrew-regular-webfont.woff') format('woff'),
-    url('../fonts/opensanshebrew-regular-webfont.ttf') format('truetype');
+    src: font-url('opensanshebrew-regular-webfont.eot');
+    src: font-url('opensanshebrew-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    font-url('opensanshebrew-regular-webfont.woff') format('woff'),
+    font-url('opensanshebrew-regular-webfont.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
     font-style: italic;
     font-weight: 700;
-    src: url('../fonts/opensanshebrew-bolditalic-webfont.eot');
-    src: url('../fonts/opensanshebrew-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/opensanshebrew-bolditalic-webfont.woff') format('woff'),
-    url('../fonts/opensanshebrew-bolditalic-webfont.ttf') format('truetype');
+    src: font-url('opensanshebrew-bolditalic-webfont.eot');
+    src: font-url('opensanshebrew-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
+    font-url('opensanshebrew-bolditalic-webfont.woff') format('woff'),
+    font-url('opensanshebrew-bolditalic-webfont.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
     font-style: normal;
     font-weight: 700;
-    src: url('../fonts/opensanshebrew-bold-webfont.eot');
-    src: url('../fonts/opensanshebrew-bold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/opensanshebrew-bold-webfont.woff') format('woff'),
-    url('../fonts/opensanshebrew-bold-webfont.ttf') format('truetype');
+    src: font-url('opensanshebrew-bold-webfont.eot');
+    src: font-url('opensanshebrew-bold-webfont.eot?#iefix') format('embedded-opentype'),
+    font-url('opensanshebrew-bold-webfont.woff') format('woff'),
+    font-url('opensanshebrew-bold-webfont.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
     font-style: italic;
     font-weight: 800;
-    src: url('../fonts/opensanshebrew-extrabold-webfont.eot');
-    src: url('../fonts/opensanshebrew-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/opensanshebrew-extrabold-webfont.woff') format('woff'),
-    url('../fonts/opensanshebrew-extrabold-webfont.ttf') format('truetype');
+    src: font-url('opensanshebrew-extrabold-webfont.eot');
+    src: font-url('opensanshebrew-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
+    font-url('opensanshebrew-extrabold-webfont.woff') format('woff'),
+    font-url('opensanshebrew-extrabold-webfont.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Open Sans Hebrew';
     font-style: normal;
     font-weight: 800;
-    src: url('../fonts/opensanshebrew-extrabold-webfont.eot');
-    src: url('../fonts/opensanshebrew-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/opensanshebrew-extrabold-webfont.woff') format('woff'),
-    url('../fonts/opensanshebrew-extrabold-webfont.ttf') format('truetype');
+    src: font-url('opensanshebrew-extrabold-webfont.eot');
+    src: font-url('opensanshebrew-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
+    font-url('opensanshebrew-extrabold-webfont.woff') format('woff'),
+    font-url('opensanshebrew-extrabold-webfont.ttf') format('truetype');
 }
 
 /* Icon Fonts */
 @font-face {
     font-family: 'icomoon';
-    src:url('../fonts/icon-fonts/icomoon.eot?5vi5iq');
-    src:url('../fonts/icon-fonts/icomoon.eot?#iefix5vi5iq') format('embedded-opentype'),
-    url('../fonts/icon-fonts/icomoon.ttf?5vi5iq') format('truetype'),
-    url('../fonts/icon-fonts/icomoon.woff?5vi5iq') format('woff'),
-    url('../fonts/icon-fonts/icomoon.svg?5vi5iq#icomoon') format('svg');
+    src:font-url('icon-fonts/icomoon.eot?5vi5iq');
+    src:font-url('icon-fonts/icomoon.eot?#iefix5vi5iq') format('embedded-opentype'),
+    font-url('icon-fonts/icomoon.ttf?5vi5iq') format('truetype'),
+    font-url('icon-fonts/icomoon.woff?5vi5iq') format('woff'),
+    font-url('icon-fonts/icomoon.svg?5vi5iq#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
