ambassadors cards new design

--- a/source/ambassadors.html.erb
+++ b/source/ambassadors.html.erb
@@ -21,41 +21,56 @@ title: "שולחן לשניים | השגרירים שלנו"
       <ul class="row">
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="ambassador-box">
-            <figure class="ambassador-img">
+            <figure class="ambassador-img text-center">
               <%= image_tag "ambassador_01.png" %>
             </figure>
             <figcaption class="ambassador-info">
-            <h3>נטלי בן דוד</h3>
-            <h4>מהנדסת בדיקות מערכת וביצועים, חברת F5</h4>
-            <p>"בעיניי להיות שגרירה זה קודם כל להוות דוגמא אישית: להראות לאנשים שאפשר וצריך לתרום לאלו ששפר מזלם - במיוחד אם אלו ילדים.
+              <h3>נטלי בן דוד</h3>
+              <h4><a href="#">מהנדס בדיקות מערכת וביצועים</a> חברת F5</h4>
+              <p>"בעיניי להיות שגרירה זה קודם כל להוות דוגמא אישית: להראות לאנשים שאפשר וצריך לתרום לאלו ששפר מזלם - במיוחד אם אלו ילדים.
 התוכנית היא מעולה בגלל שקל להצטרף, לא צריך להתאמץ הרבה והתוצאה עצמה היא ענקית ומשנה חיים.
 אני מקווה שאנשים ישכילו להבין את זה ויצטרפו בהמוניהם"</p>
             </figcaption>
+            <div class="amabassador-company row">
+              <div class="col-xs-3 col-sm-4">
+              <%= image_tag "ambassador_logo_01.png" %></div>
+              <div class="col text-right"><a href="https://www.linkedin.com/company/f5-networks" target="_blank">חברת F5</a></div>
+            </div>
           </div>
         </li>
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="ambassador-box">
-            <figure class="ambassador-img">
+            <figure class="ambassador-img text-center">
               <%= image_tag "ambassador_02.png" %>
             </figure>
             <figcaption class="ambassador-info">
             <h3>יובל קשטכר</h3>
-            <h4>עובד של unilink חברת השמה להיי טק</h4>
+            <h4><a href="#">עובד של </a> unilink חברת השמה להיי טק</h4>
             <p>"נפלה בחלקי הזכות לקחת חלק בפרויקט המגניב הזה.
 קל מאוד להתלונן על כמה נורא המצב בארץ, יש להבין ששינוי החברתי מתחיל בנו, מלמטה." </p>
             </figcaption>
+            <div class="amabassador-company row text-center">
+              <div class="col-xs-3 col-sm-4">
+              <%= image_tag "ambassador_logo_02.png" %></div>
+              <div class="col text-right"><a href="https://www.linkedin.com/pub/unilink-ltd/18/2b/77b" target="_blank">חברת השמה להיי טק</a></div>
+            </div>
           </div>
         </li>
         <li class="col-lg-4 col-md-6 fly-in animated-content">
-          <div class="ambassador-box">
+          <div class="ambassador-box text-center">
             <figure class="ambassador-img">
               <%= image_tag "ambassador_03.png" %>
             </figure>
             <figcaption class="ambassador-info">
               <h3>ענבל גילאי</h3>
-              <h4> מפתחת תוכנה בחברת קלרנה</h4>
+              <h4><a href="#">מפתחת תוכנה</a> בחברת קלרנה</h4>
               <p>" הצטרפתי לפרוייקט כי זו דרך קלה ונחמדה לעשות משהו טוב. אהבתי את הרעיון של ״בכל פעם שאתה אוכל, עזור למישהו לאכול איתך״</p>
             </figcaption>
+            <div class="amabassador-company row">
+              <div class="col-xs-3 col-sm-4">
+              <%= image_tag "ambassador_logo_03.png" %></div>
+              <div class="col text-right"><a href="https://www.linkedin.com/company/748731" target="_blank">חברת קלרנה</a></div>
+            </div>
           </div>
         </li>
       </ul>
