credits mobile-hidden

--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -32,7 +32,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4 text-center credits">
+        <div class="col-sm-4 text-center credits mobile-hidden">
             <h5 class="foot-title clearfix">קרדיטים</h5>
             <div class="row">
               <div class="col-sm-6 text-left">
