--- a/source/layouts/_footer_sponsers.html.erb
+++ b/source/layouts/_footer_sponsers.html.erb
@@ -31,7 +31,7 @@
           <%= image_tag "sponsor_05.jpg", alt: "Shenhav" %>
         </a>
       </li>
-      <li>
+      <li class="mobile-hidden">
         <a href="http://www.latet.org.il" target="_blank">
           <%= image_tag "sponsor_06.jpg", alt: "Latet" %>
         </a>
