--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -11,6 +11,8 @@
     <% end %>
     <link href='<%= data.generic.settings.domain %>' rel='canonical'>
     <link href='http://www.google-analytics.com' rel='dns-prefetch'>
+    <link href='https://cdnjs.cloudflare.com' rel='dns-prefetch'>
+    <link href='https://fonts.googleapis.com' rel='dns-prefetch'>
     <!-- Fonts -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
