--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -13,7 +13,7 @@ title: "שולחן לשניים | אודות"
       </h2>
       <p>עכשיו השתכנעתם? </p>
       <div class="sidebar-btn text-center">
-        <a href="<%= data.generic.settings.signup_link %>" class="btn" target="_blank">
+        <a href="<%= data.generic.settings.signup_link %>" data-event="ga" data-ga-category="About Page" data-ga-action="click" data-ga-label="join1" class="btn" target="_blank">
           קליק אחד וזהו
         </a>
       </div>
