--- a/source/ambassadors.html.erb
+++ b/source/ambassadors.html.erb
@@ -14,7 +14,7 @@ title: "שולחן לשניים | השגרירים שלנו"
         ואפשרו גם להם לעזור
       </p>
       <div class="sidebar-btn text-center">
-        <a href="<%= data.generic.settings.signup_link %>" class="btn" target="_blank">קליק אחד וזהו</a>
+        <a href="<%= data.generic.settings.signup_link %>" data-event="ga" data-ga-category="Ambassadors Page" data-ga-action="click" data-ga-label="join1" class="btn" target="_blank">קליק אחד וזהו</a>
       </div>
     </aside>
     <div class="contant">
@@ -26,7 +26,7 @@ title: "שולחן לשניים | השגרירים שלנו"
             </figure>
             <figcaption class="ambassador-info">
               <h3>נטלי בן דוד</h3>
-              <h4><a href="#">מהנדס בדיקות מערכת וביצועים</a> חברת F5</h4>
+              <h4><a href="#" target="_blank">מהנדס בדיקות מערכת וביצועים</a> חברת F5</h4>
               <p>"בעיניי להיות שגרירה זה קודם כל להוות דוגמא אישית: להראות לאנשים שאפשר וצריך לתרום לאלו ששפר מזלם - במיוחד אם אלו ילדים.
 התוכנית היא מעולה בגלל שקל להצטרף, לא צריך להתאמץ הרבה והתוצאה עצמה היא ענקית ומשנה חיים.
 אני מקווה שאנשים ישכילו להבין את זה ויצטרפו בהמוניהם"</p>
@@ -34,7 +34,9 @@ title: "שולחן לשניים | השגרירים שלנו"
             <div class="amabassador-company row">
               <div class="col-xs-3 col-sm-4">
               <%= image_tag "ambassador_logo_01.png" %></div>
-              <div class="col text-right"><a href="https://www.linkedin.com/company/f5-networks" target="_blank">חברת F5</a></div>
+              <div class="col text-right">
+                <a href="https://www.linkedin.com/company/f5-networks" data-event="ga" data-ga-category="Ambassadors Page" data-ga-action="click" data-ga-label="ambassador1" target="_blank">חברת F5</a>
+              </div>
             </div>
           </div>
         </li>
@@ -45,14 +47,16 @@ title: "שולחן לשניים | השגרירים שלנו"
             </figure>
             <figcaption class="ambassador-info">
             <h3>יובל קשטכר</h3>
-            <h4><a href="#">עובד של </a> unilink חברת השמה להיי טק</h4>
+            <h4><a href="#" target="_blank">עובד של </a> unilink חברת השמה להיי טק</h4>
             <p>"נפלה בחלקי הזכות לקחת חלק בפרויקט המגניב הזה.
 קל מאוד להתלונן על כמה נורא המצב בארץ, יש להבין ששינוי החברתי מתחיל בנו, מלמטה." </p>
             </figcaption>
             <div class="amabassador-company row text-center">
               <div class="col-xs-3 col-sm-4">
               <%= image_tag "ambassador_logo_02.png" %></div>
-              <div class="col text-right"><a href="https://www.linkedin.com/pub/unilink-ltd/18/2b/77b" target="_blank">חברת השמה להיי טק</a></div>
+              <div class="col text-right">
+                <a href="https://www.linkedin.com/pub/unilink-ltd/18/2b/77b" data-event="ga" data-ga-category="Ambassadors Page" data-ga-action="click" data-ga-label="ambassador2" target="_blank">חברת השמה להיי טק</a>
+              </div>
             </div>
           </div>
         </li>
@@ -63,13 +67,15 @@ title: "שולחן לשניים | השגרירים שלנו"
             </figure>
             <figcaption class="ambassador-info">
               <h3>ענבל גילאי</h3>
-              <h4><a href="#">מפתחת תוכנה</a> בחברת קלרנה</h4>
+              <h4><a href="#" target="_blank">מפתחת תוכנה</a> בחברת קלרנה</h4>
               <p>" הצטרפתי לפרוייקט כי זו דרך קלה ונחמדה לעשות משהו טוב. אהבתי את הרעיון של ״בכל פעם שאתה אוכל, עזור למישהו לאכול איתך״</p>
             </figcaption>
             <div class="amabassador-company row">
               <div class="col-xs-3 col-sm-4">
               <%= image_tag "ambassador_logo_03.png" %></div>
-              <div class="col text-right"><a href="https://www.linkedin.com/company/748731" target="_blank">חברת קלרנה</a></div>
+              <div class="col text-right">
+                <a href="https://www.linkedin.com/company/748731" data-event="ga" data-ga-category="Ambassadors Page" data-ga-action="click" data-ga-label="ambassador3" target="_blank">חברת קלרנה</a>
+              </div>
             </div>
           </div>
         </li>
