--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,10 +4,13 @@
   <div class="banner section-blue">
     <div class="container-small">
       <h2> בכל הזמנת ארוחה עם <span>תן ביס</span><br>תורמים שקל לילד שזקוק לארוחה</h2>
-      <a href="<%= data.generic.settings.signup_link %>&utm_content=1" class="btn" target="_blank">הצטרף עכשיו</a>
+      <a href="<%= data.generic.settings.signup_link %>&utm_content=join1" class="btn" target="_blank"
+      data-event="ga" data-ga-category="Home Page" data-ga-action="click" data-ga-label="join1">הצטרף עכשיו</a>
       <div class="banner-media">
         <div class="banner-media-inner">
-          <button type="button" class="btn-reset btn-play" data-toggle="modal" data-target="#video-modal" data-theVideo="https://www.youtube.com/embed/HieorPee6KM">
+          <button type="button" class="btn-reset btn-play" data-toggle="modal"
+            data-target="#video-modal" data-theVideo="https://www.youtube.com/embed/HieorPee6KM"
+            data-event="ga" data-ga-category="Home Page" data-ga-action="click" data-ga-label="play video">
             <i class="icon icon-play"></i>
           </button>
         </div>
@@ -63,7 +66,8 @@
   <div class="section-separator section-blue fly-in animated-content">
     <div class="container-small">
       <p>נכון שזה למטרה טובה?..</p>
-      <a href="<%= data.generic.settings.signup_link %>&utm_content=2" class="btn" target="_blank">
+      <a href="<%= data.generic.settings.signup_link %>&utm_content=join2" class="btn" target="_blank"
+        data-event="ga" data-ga-category="Home Page" data-ga-action="click" data-ga-label="join2">
         להרשמה
       </a>
     </div>
@@ -76,7 +80,8 @@
   <div class="section-separator section-blue fly-in animated-content">
     <div class="container-small">
       <p>עכשיו כבר בטוח השתכנעתם!</p>
-      <a href="<%= data.generic.settings.signup_link %>&utm_content=3" class="btn" target="_blank">
+      <a href="<%= data.generic.settings.signup_link %>&utm_content=join3" class="btn" target="_blank"
+        data-event="ga" data-ga-category="Home Page" data-ga-action="click" data-ga-label="join3">
          יאללה, להרשמה
       </a>
     </div>
