--- a/source/layouts/_footer_sponsers.html.erb
+++ b/source/layouts/_footer_sponsers.html.erb
@@ -2,37 +2,44 @@
   <div class="container-small">
     <ul class="foot-sponsors clearfix">
       <li>
-        <a href="http://www.weforum.org/community/global-shapers" target="_blank">
+        <a href="http://www.weforum.org/community/global-shapers" 
+          data-event="ga" data-ga-category="Footer Bottom Menu" data-ga-action="click" data-ga-label="global shapers" target="_blank">
           <%= image_tag "sponsor_01.jpg", alt: "Global Shapers community" %>
         </a>
       </li>
       <li>
-        <a href="http://www.telepay.co.il/" target="_blank">
+        <a href="http://www.telepay.co.il/" 
+          data-event="ga" data-ga-category="Footer Bottom Menu" data-ga-action="click" data-ga-label="telepay" target="_blank">
           <%= image_tag "sponsor_02.jpg", alt: "Telepay" %>
         </a>
       </li>
       <li>
-        <a href="http://astrails.com" target="_blank">
+        <a href="http://astrails.com" data-event="ga" data-ga-category="Footer Bottom Menu" data-ga-action="click" data-ga-label="astrails"
+          target="_blank">
           <%= image_tag "astrails_logo.png", alt: "Astrails" %>
         </a>
       </li>
       <li>
-        <a href="http://tross.co/" target="_blank">
+        <a href="http://tross.co/" data-event="ga" data-ga-category="Footer Bottom Menu" data-ga-action="click" data-ga-label="tross"
+          target="_blank">
           <%= image_tag "sponsor_03.jpg", alt: "Tross" %>
         </a>
       </li>
       <li>
-        <a href="https://www.10bis.co.il/" target="_blank">
+        <a href="https://www.10bis.co.il/" 
+          data-event="ga" data-ga-category="Footer Bottom Menu" data-ga-action="click" data-ga-label="10bis" target="_blank">
           <%= image_tag "sponsor_04.jpg", alt: "10bis" %>
         </a>
       </li>
       <li>
-        <a href="http://www.shenhavlaw.com/" target="_blank">
+        <a href="http://www.shenhavlaw.com/" 
+          data-event="ga" data-ga-category="Footer Bottom Menu" data-ga-action="click" data-ga-label="shenhav" target="_blank">
           <%= image_tag "sponsor_05.jpg", alt: "Shenhav" %>
         </a>
       </li>
       <li class="mobile-hidden">
-        <a href="http://www.latet.org.il" target="_blank">
+        <a href="http://www.latet.org.il" 
+          data-event="ga" data-ga-category="Footer Bottom Menu" data-ga-action="click" data-ga-label="latet" target="_blank">
           <%= image_tag "sponsor_06.jpg", alt: "Latet" %>
         </a>
       </li>
