--- a/source/questions_and_answers.html.erb
+++ b/source/questions_and_answers.html.erb
@@ -11,7 +11,8 @@ title: "שולחן לשניים | שאלות ותשובות"
       <h2 class="title-blue">שאלות ותשובות...</h2>
       <p class="explain">יש לך עוד שאלות?</p>
       <div class="sidebar-btn text-center" >
-        <a class="btn" type="submit"  href="/contacts.html">לחץ פה</a>
+        <a class="btn" type="submit"  href="/contacts.html" 
+        data-event="ga" data-ga-category="Q&A Page" data-ga-action="click" data-ga-label="contacts link">לחץ פה</a>
       </div>
     </aside>
     <div class="contant">
@@ -135,7 +136,7 @@ title: "שולחן לשניים | שאלות ותשובות"
             <h3>ואם אני רוצה לדעת עוד?</h3>
             <p>נשמח לתת לך מידע נוסף בכתובת המייל
               <%= data.generic.settings.email %> ובאתר
-              <a href="//www.latet.org.il" target="_blank">www.latet.org.il</a>
+              <a href="//www.latet.org.il" data-event="ga" data-ga-category="Q&A Page" data-ga-action="click" data-ga-label="latet" target="_blank">www.latet.org.il</a>
             </p>
             </figcaption>
           </div>
