--- a/source/layouts/_header.html.erb
+++ b/source/layouts/_header.html.erb
@@ -4,16 +4,16 @@
     <div class="head-right clearfix">
       <button id="menu-open" class="menu-toggle mobile-visiable btn-reset"><i class="icon icon-menu"></i></button>
       <h1 class="head-logo">
-        <a href="/">
+        <a href="/" data-event="ga" data-ga-category="Menu" data-ga-action="click" data-ga-label="main_logo" >
           <%= image_tag "head-logo.png", alt: "table for two logo" %>
         </a>
       </h1>
       <nav class="head-nav mobile-hidden">
         <ul class="clearfix">
-          <li><a href="/contacts.html" class='<%= selected_menu('contacts') %>'>צור קשר</a></li>
-          <li><a href="/about.html" class='<%= selected_menu('about') %>'>אנחנו במספרים</a></li>
-          <li><a href="/ambassadors.html" class='<%= selected_menu('ambassadors') %>'>השגרירים שלנו</a></li>
-          <li><a href="/questions_and_answers.html" class='<%= selected_menu('questions_and_answers') %>'>שאלות ותשובות</a></li>
+          <li><a href="/contacts.html" data-event="ga" data-ga-category="Menu" data-ga-action="click" data-ga-label="contacts" class='<%= selected_menu('contacts') %>'>צור קשר</a></li>
+          <li><a href="/about.html" data-event="ga" data-ga-category="Menu" data-ga-action="click" data-ga-label="about" class='<%= selected_menu('about') %>'>אנחנו במספרים</a></li>
+          <li><a href="/ambassadors.html" data-event="ga" data-ga-category="Menu" data-ga-action="click" data-ga-label="ambasasadors" class='<%= selected_menu('ambassadors') %>'>השגרירים שלנו</a></li>
+          <li><a href="/questions_and_answers.html" data-event="ga" data-ga-category="Menu" data-ga-action="click" data-ga-label="q&a" class='<%= selected_menu('questions_and_answers') %>'>שאלות ותשובות</a></li>
         </ul>
       </nav>
     </div>
