--- a/source/layouts/_mobile_menu.html.erb
+++ b/source/layouts/_mobile_menu.html.erb
@@ -2,11 +2,11 @@
 <nav class="mobile-nav mobile-visiable">
   <button id="menu-close" class="menu-toggle mobile-visiable btn-reset"><i class="icon icon-close"></i></button>
   <ul>
-    <li><a href="/index.html" class='<%= selected_menu('index') %>'>עמוד הבית</a></li>
-    <li><a href="/contacts.html" class='<%= selected_menu('contacts') %>'>צור קשר</a></li>
-    <li><a href="/about.html" class='<%= selected_menu('about') %>'>אנחנו במספרים</a></li>
-    <li><a href="/ambassadors.html" class='<%= selected_menu('ambassadors') %>'>השגרירים שלנו</a></li>
-    <li><a href="/questions_and_answers.html" class='<%= selected_menu('questions_and_answers') %>'>שאלות ותשובות</a></li>
+    <li><a href="/index.html" data-event="ga" data-ga-category="Mobile Menu" data-ga-action="click" data-ga-label="home" class='<%= selected_menu('index') %>'>עמוד הבית</a></li>
+    <li><a href="/contacts.html" data-event="ga" data-ga-category="Mobile Menu" data-ga-action="click" data-ga-label="contacts" class='<%= selected_menu('contacts') %>'>צור קשר</a></li>
+    <li><a href="/about.html" data-event="ga" data-ga-category="Mobile Menu" data-ga-action="click" data-ga-label="about" class='<%= selected_menu('about') %>'>אנחנו במספרים</a></li>
+    <li><a href="/ambassadors.html" data-event="ga" data-ga-category="Mobile Menu" data-ga-action="click" data-ga-label="ambassadors" class='<%= selected_menu('ambassadors') %>'>השגרירים שלנו</a></li>
+    <li><a href="/questions_and_answers.html" data-event="ga" data-ga-category="Mobile Menu" data-ga-action="click" data-ga-label="q&a" class='<%= selected_menu('questions_and_answers') %>'>שאלות ותשובות</a></li>
   </ul>
 </nav>
 <!-- /mobile-nav -->
