--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content='<%= data.generic.seo.description %>' name='description'>
     <% ogp_tags do|name, value| %>
-      <meta property=<%= name %> content=<%= value %> >
+      <meta property=<%= name %> content="<%= value %>" >
     <% end %>
     <link href='<%= data.generic.settings.domain %>' rel='canonical'>
     <link href='http://www.google-analytics.com' rel='dns-prefetch'>
