--- a/source/ambassadors.html.erb
+++ b/source/ambassadors.html.erb
@@ -19,66 +19,29 @@ title: "שולחן לשניים | השגרירים שלנו"
     </aside>
     <div class="contant">
       <ul class="row">
-        <li class="col-lg-4 col-md-6 fly-in animated-content">
-          <div class="ambassador-box">
-            <figure class="ambassador-img text-center">
-              <%= image_tag "ambassador_01.png" %>
-            </figure>
-            <figcaption class="ambassador-info">
-              <h3>נטלי בן דוד</h3>
-              <h4><a href="#" target="_blank">מהנדס בדיקות מערכת וביצועים</a> חברת F5</h4>
-              <p>"בעיניי להיות שגרירה זה קודם כל להוות דוגמא אישית: להראות לאנשים שאפשר וצריך לתרום לאלו ששפר מזלם - במיוחד אם אלו ילדים.
-התוכנית היא מעולה בגלל שקל להצטרף, לא צריך להתאמץ הרבה והתוצאה עצמה היא ענקית ומשנה חיים.
-אני מקווה שאנשים ישכילו להבין את זה ויצטרפו בהמוניהם"</p>
-            </figcaption>
-            <div class="amabassador-company row">
-              <div class="col-xs-3 col-sm-4">
-              <%= image_tag "ambassador_logo_01.png" %></div>
-              <div class="col text-right">
-                <a href="https://www.linkedin.com/company/f5-networks" data-event="ga" data-ga-category="Ambassadors Page" data-ga-action="click" data-ga-label="ambassador1" target="_blank">חברת F5</a>
+        <% data.ambassadors.list.each do |ambassador| %>
+          <li class="col-lg-4 col-md-6 fly-in animated-content">
+            <div class="ambassador-box">
+              <figure class="ambassador-img text-center">
+                <%= image_tag ambassador.image %>
+              </figure>
+              <figcaption class="ambassador-info">
+                <h3><%= ambassador.name %></h3>
+                <h4>
+                  <%= ambassador.title %>, <%= ambassador.company %>
+                </h4>
+                <p>"<%= ambassador.message %>"</p>
+              </figcaption>
+              <div class="amabassador-company row">
+                <div class="col-xs-3 col-sm-4">
+                <%= image_tag ambassador.company_logo %></div>
+                <div class="col text-right">
+                  <a href="<%= ambassador.company_link %>" data-event="ga" data-ga-category="Ambassadors Page" data-ga-action="click" data-ga-label="ambassador1" target="_blank"><%= ambassador.company %></a>
+                </div>
               </div>
             </div>
-          </div>
-        </li>
-        <li class="col-lg-4 col-md-6 fly-in animated-content">
-          <div class="ambassador-box">
-            <figure class="ambassador-img text-center">
-              <%= image_tag "ambassador_02.png" %>
-            </figure>
-            <figcaption class="ambassador-info">
-            <h3>יובל קשטכר</h3>
-            <h4><a href="#" target="_blank">עובד של </a> unilink חברת השמה להיי טק</h4>
-            <p>"נפלה בחלקי הזכות לקחת חלק בפרויקט המגניב הזה.
-קל מאוד להתלונן על כמה נורא המצב בארץ, יש להבין ששינוי החברתי מתחיל בנו, מלמטה." </p>
-            </figcaption>
-            <div class="amabassador-company row text-center">
-              <div class="col-xs-3 col-sm-4">
-              <%= image_tag "ambassador_logo_02.png" %></div>
-              <div class="col text-right">
-                <a href="https://www.linkedin.com/pub/unilink-ltd/18/2b/77b" data-event="ga" data-ga-category="Ambassadors Page" data-ga-action="click" data-ga-label="ambassador2" target="_blank">חברת השמה להיי טק</a>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li class="col-lg-4 col-md-6 fly-in animated-content">
-          <div class="ambassador-box text-center">
-            <figure class="ambassador-img">
-              <%= image_tag "ambassador_03.png" %>
-            </figure>
-            <figcaption class="ambassador-info">
-              <h3>ענבל גילאי</h3>
-              <h4><a href="#" target="_blank">מפתחת תוכנה</a> בחברת קלרנה</h4>
-              <p>" הצטרפתי לפרוייקט כי זו דרך קלה ונחמדה לעשות משהו טוב. אהבתי את הרעיון של ״בכל פעם שאתה אוכל, עזור למישהו לאכול איתך״</p>
-            </figcaption>
-            <div class="amabassador-company row">
-              <div class="col-xs-3 col-sm-4">
-              <%= image_tag "ambassador_logo_03.png" %></div>
-              <div class="col text-right">
-                <a href="https://www.linkedin.com/company/748731" data-event="ga" data-ga-category="Ambassadors Page" data-ga-action="click" data-ga-label="ambassador3" target="_blank">חברת קלרנה</a>
-              </div>
-            </div>
-          </div>
-        </li>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
