ambassadors link updated

--- a/source/ambassadors.html.erb
+++ b/source/ambassadors.html.erb
@@ -14,7 +14,7 @@ title: "שולחן לשניים | השגרירים שלנו"
         ואפשרו גם להם לעזור
       </p>
       <div class="sidebar-btn text-center">
-        <a href="<%= data.generic.settings.signup_link %>" data-event="ga" data-ga-category="Ambassadors Page" data-ga-action="click" data-ga-label="join1" class="btn" target="_blank">קליק אחד וזהו</a>
+        <a href="<%= data.generic.settings.ambassador_join %>" data-event="ga" data-ga-category="Ambassadors Page" data-ga-action="click" data-ga-label="join1" class="btn" target="_blank">קליק אחד וזהו</a>
       </div>
     </aside>
     <div class="contant">
