--- a/source/layouts/_header.html.erb
+++ b/source/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <!-- header -->
 <header class="header">
-  <div class="header-inner clearfix">
-    <div class="head-right clearfix">
+  <div class="header-inner clearfix navbar navbar-default navbar-fixed-top">
+    <div class="head-right clearfix container">
       <button id="menu-open" class="menu-toggle mobile-visiable btn-reset"><i class="icon icon-menu"></i></button>
       <h1 class="head-logo">
         <a href="/" data-event="ga" data-ga-category="Menu" data-ga-action="click" data-ga-label="main_logo" >
