--- a/source/_contacts_partial.html.erb
+++ b/source/_contacts_partial.html.erb
@@ -17,9 +17,9 @@
             <h3>צור איתנו קשר</h3>
             <form class="page-form" action="ContactUsAction.aspx" method="post">
               <div class="form-group">
-                <input class="form-control" type="email" placeholder="דואר אלקטרוני שלך" required/>
+                <input class="form-control" name="email" type="email" placeholder="דואר אלקטרוני שלך" required/>
               </div>
-              <textarea rows="7" cols="50" class="form-control" placeholder="הודעה"></textarea>
+              <textarea rows="7" cols="50" name="message" class="form-control" placeholder="הודעה"></textarea>
               <div class="btn-block">
                 <input class="btn" type="submit" value="שלח עכשיו" 
                 data-event="ga" data-ga-category="Contacts Page" data-ga-action="click" data-ga-label="form" />
